--- a/mvt_digiprint_gui/Views/LB701UVView/LB701UVView.xaml
+++ b/mvt_digiprint_gui/Views/LB701UVView/LB701UVView.xaml
@@ -56,8 +56,8 @@
 
                 <StackPanel Margin="10,0,0,0" x:Name="SettingsTab" Grid.Row="0" Orientation="Horizontal" Background="Transparent">
                     <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Main"          Content="Main"          IsChecked="true"/>
-                    <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Log"           Content="Log"           />
                     <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Cfg"           Content="Configuration" />
+                    <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Log"           Content="PLC Log"       />
                     <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Plc"           Content="PLC Info"      Last="True"/>
                 </StackPanel>
 
