Spooler: Allocating large memory

--- a/mvt_digiprint_gui/Views/PrintSystemView/PrintSystemGrid.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/PrintSystemGrid.xaml
@@ -15,7 +15,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto" x:Name="InkCylinders_RowHeight"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
