--- a/mvt_digiprint_gui/Views/LB702UVView/LB702UV_Par.xaml
+++ b/mvt_digiprint_gui/Views/LB702UVView/LB702UV_Par.xaml
@@ -133,35 +133,33 @@
                 </Grid>
             </ScrollViewer>
 
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" >
 
                 <common:MvtButton  x:Name="ButtonSave"
-                                   Grid.Column="0" Margin="15, 5, 15, 5"
+                                   Margin="15, 0"
                               Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" 
                               Click="Save_Clicked"
                                  
                               IsChecked="{Binding ElementName=ParPanelMaterial, Path=Changed}">
                     <iconPacks:PackIconMaterial Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" 
                                             HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="20" Height="20"
-                                                Kind="Check"></iconPacks:PackIconMaterial>
+                                                Kind="Check"/>
                 </common:MvtButton>
                 
-                <common:MvtButton 
-                                   Grid.Column="0" Margin="15, 5, 15, 5"
+                <common:MvtButton Margin="15, 0"
                               Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" 
-                              Click="Reload_Clicked">              
+                              Click="Reload_Clicked">
                     <iconPacks:PackIconMaterial Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" 
                                             HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="20" Height="20"
-                                                Kind="Reload" Margin="3,0,0,0"></iconPacks:PackIconMaterial>
+                                                Kind="Reload" Margin="3,0,0,0"/>
                 </common:MvtButton>
 
-                <common:MvtButton 
-                                   Grid.Column="0" Margin="15, 5, 15, 5"
+                <common:MvtButton Margin="15, 0"
                               Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" 
                               Click="Delete_Clicked">
                     <iconPacks:PackIconMaterial Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" 
                                             HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="20" Height="20"
-                                                Kind="Delete"></iconPacks:PackIconMaterial>
+                                                Kind="Delete"/>
                 </common:MvtButton>
             </StackPanel>
         </Grid>
