--- a/mvt_digiprint_gui/Views/LB702UVView/LB702UV_View.xaml
+++ b/mvt_digiprint_gui/Views/LB702UVView/LB702UV_View.xaml
@@ -51,27 +51,26 @@
         </StackPanel>
 
         <!-- MAIN Window _________________________________________________________________________-->
-            <Grid Grid.Row="2" Margin="10,0,10,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
+        <Grid Grid.Row="2" Margin="10,0,10,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-                <StackPanel Margin="0,0,0,0" Grid.Row="0" x:Name="SettingsTab" Orientation="Horizontal" Background="Transparent">
-                    <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Main"          Content="Main"          IsChecked="true"/>
-                 <!--   <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Cleaning"      Content="Cleaning"/> -->
-                    <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Log"           Content="PLC Log"           />
-                    <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Plc"           Content="PLC Info"      Last="True"/>
-                </StackPanel>   
+            <StackPanel Margin="0,-5,0,0" Grid.Row="0" x:Name="SettingsTab" Orientation="Horizontal" Background="Transparent">
+                <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Main"          Content="Main"          IsChecked="true"/>
+                <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Log"           Content="PLC Log"           />
+                <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Plc"           Content="PLC Info"      Last="True"/>
+            </StackPanel>
 
 
             <!-- TAB: Main ___________________________________________________________________-->
-                <Grid Grid.Row="1" Visibility="{Binding ElementName=RB_Main, Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
+            <Grid Grid.Row="1" Visibility="{Binding ElementName=RB_Main, Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
                 <local:LB702UV_Par Grid.Column="0"/>
@@ -90,22 +89,16 @@
                 <rx_uc:StepperView Grid.Column="2" Margin="5,0,0,0"/>
             </Grid>
 
-            <!-- TAB: Cleaning ____________________________________________________________
-            <rx_uc:StepperView Visibility="{Binding ElementName=RB_Cleaning, Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}" Grid.Row="1"/>
-            -->
-            
             <!-- TAB: PLC Log ____________________________________________________________-->
-                <rx_uc:PlcLog Grid.Row="1"
+            <rx_uc:PlcLog Grid.Row="1"
                       HorizontalAlignment="Left"
                       VerticalAlignment="Stretch"
                       Visibility="{Binding ElementName=RB_Log, Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}"
                       />
 
-                <!-- TAB: PLC Info ______________________________________________________________________________________-->
-                <rx_uc:PlcStatus HorizontalAlignment="Stretch" Grid.Row="1" Visibility="{Binding ElementName=RB_Plc,  Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}"/>
-            </Grid>
-   
-
+            <!-- TAB: PLC Info ______________________________________________________________________________________-->
+            <rx_uc:PlcStatus HorizontalAlignment="Stretch" Grid.Row="1" Visibility="{Binding ElementName=RB_Plc,  Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}"/>
+        </Grid>
 
         <!-- NO Connection _______________________________________________________________________-->
         <TextBlock x:Name="PlcNotConnected"
