--- a/mvt_digiprint_gui/Views/AlignmentView/DisabledJetsDensity/JetCompensationDensityView.xaml
+++ b/mvt_digiprint_gui/Views/AlignmentView/DisabledJetsDensity/JetCompensationDensityView.xaml
@@ -47,7 +47,7 @@
                     Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" Margin="5"
                                  Click="Exit_Click">
                     <iconPacks:PackIconMaterial Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}"
-                                        Kind="{Binding Changed, Converter={StaticResource ExitDialogIconConverter}}"
+                                        Kind="Close"
                                         Height="20"/>
                 </common:MvtButton>
             </StackPanel>
